--- a/assets/config/option.yml
+++ b/assets/config/option.yml
@@ -10,6 +10,7 @@ client:
   impl: html
   postman:
     meta_data:
+      proxies: clash
       cookies: null
       impersonate: chrome110
     type: cffi
