--- a/assets/config/option.yml
+++ b/assets/config/option.yml
@@ -10,9 +10,11 @@ client:
   impl: html
   postman:
     meta_data:
-      proxies: clash
       cookies: null
       impersonate: chrome110
+      proxies:
+        http: http://127.0.0.1:7890
+        https: https://127.0.0.1:7890
     type: cffi
   retry_times: 5
 
